<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.afl.waterReminderDrinkAlarmMonitor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_drinksFragment"
            app:destination="@id/drinksFragment" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_setting"
            app:destination="@id/navigation_setting" />
        <action
            android:id="@+id/action_navigation_home_self"
            app:destination="@+id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.afl.waterReminderDrinkAlarmMonitor.ui.dashboard.DashboardFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.afl.waterReminderDrinkAlarmMonitor.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/drinksFragment"
        android:name="com.afl.waterReminderDrinkAlarmMonitor.ui.drinks.DrinksFragment"
        android:label="drinks_fragment"
        tools:layout="@layout/drinks_fragment">
        <action
            android:id="@+id/action_drinksFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.afl.waterReminderDrinkAlarmMonitor.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/history_fragment">
        <action
            android:id="@+id/action_navigation_history_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>